--- a/src/Modules/Navbar.module.css
+++ b/src/Modules/Navbar.module.css
@@ -33,8 +33,8 @@ nav ul li a:hover {
   z-index: 10000;
   display: none;
   position: fixed;
-  top: 3%;
-  right: 6%;
+  top: 4%;
+  right: 8%;
   cursor: pointer;
   max-height: 35px;
   max-width: 44px;
